tests/NormalTests/paczka1/small_fuzzy/11121022.err
Error in line 3: gjtBS1E6dUZ A26 43,8
Error in line 9: gjtBS1E6dUZ S359 91,9
